--- a/xp-schema.html
+++ b/xp-schema.html
@@ -17,4 +17,4 @@ This class is used to provide scheming functionalities, including sanitization a
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
-<script src="dist/xp-schema.js"></script>
+<script src="dist/xp-schema.min.js"></script>
