--- a/xp-schema.html
+++ b/xp-schema.html
@@ -11,6 +11,7 @@ This class is used to provide scheming functionalities, including sanitization a
 
 @class xp-schema
 @description This class is used to provide scheming functionalities, including sanitization and validation.
+@group functionality
 @homepage http://www.expandjs.com/classes/xp-schema
 
 @dependency expandjs ExpandJS/expandjs
