--- a/xp-schema.html
+++ b/xp-schema.html
@@ -7,10 +7,10 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This class is used to provide scheming functionalities, including sanitization and validation.
+This class is used to provide scheming functionality, including sanitization and validation.
 
 @class xp-schema
-@description This class is used to provide scheming functionalities, including sanitization and validation.
+@description This class is used to provide scheming functionality, including sanitization and validation.
 @group functionality
 @homepage http://www.expandjs.com/classes/xp-schema
 
