--- a/xp-schema.html
+++ b/xp-schema.html
@@ -12,7 +12,7 @@ This class is used to provide scheming functionality, including sanitization and
 @class xp-schema
 @description This class is used to provide scheming functionality, including sanitization and validation.
 @group functionality
-@homepage http://www.expandjs.com/classes/xp-schema
+@homepage http://expandjs.com/classes/xp-schema
 
 @dependency expandjs ExpandJS/expandjs
 -->
