--- a/xp-schema.html
+++ b/xp-schema.html
@@ -11,6 +11,7 @@ This class is used to provide scheming functionality, including sanitization and
 
 @class xp-schema
 @description This class is used to provide scheming functionality, including sanitization and validation.
+@keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-schema
 
