--- a/xp-schema.html
+++ b/xp-schema.html
@@ -10,7 +10,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 This class is used to provide scheming functionality, including sanitization and validation.
 
 @class xp-schema
-@description This class is used to provide scheming functionality, including sanitization and validation.
+@description This class is used to provide scheming functionality, including sanitization and validation
 @keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-schema
