- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/xp-schema.html
+++ b/xp-schema.html
@@ -14,6 +14,7 @@ This class is used to provide scheming functionality, including sanitization and
 @keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-schema
+@repository https://github.com/ExpandJS/xp-schema
 
 @dependency expandjs ExpandJS/expandjs#0.9.5
 -->
