- Updated bower.json - Minor bug fixes

--- a/xp-schema.html
+++ b/xp-schema.html
@@ -17,7 +17,9 @@ This class is used to provide scheming functionality, including sanitization and
 @repository https://github.com/ExpandJS/xp-schema
 
 @dependency expandjs ExpandJS/expandjs#0.9.7
+@dependency xp-emitter ExpandJS/xp-emitter#0.9.7
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
+<link rel="import" href="../xp-emitter/xp-emitter.html">
 <script src="dist/xp-schema.min.js"></script>
