--- a/xp-schema.html
+++ b/xp-schema.html
@@ -7,17 +7,18 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This class is used to provide scheming functionality, including sanitization and validation.
+A class used to provide scheming functionality.
 
 @class xp-schema
-@description This class is used to provide scheming functionality, including sanitization and validation
-@keywords nodejs, web app, javascript, expandjs, web-components
+@description A class used to provide scheming functionality
+@keywords nodejs, web app, javascript, expandjs, custom elements, web-components
 @group functionality
+
 @homepage http://expandjs.com/classes/xp-schema
 @repository https://github.com/ExpandJS/xp-schema
 
-@dependency expandjs ExpandJS/expandjs#0.9.11
-@dependency xp-emitter ExpandJS/xp-emitter#0.9.11
+@dependency expandjs ExpandJS/expandjs#0.10.0
+@dependency xp-emitter ExpandJS/xp-emitter#0.10.0
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
