--- a/xp-schema.html
+++ b/xp-schema.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2015 The ExpandJS authors. All rights reserved.
+Copyright (c) 2015 The expand.js authors. All rights reserved.
 This code may only be used under the BSD style license found at https://expandjs.github.io/LICENSE.txt
 The complete set of authors may be found at https://expandjs.github.io/AUTHORS.txt
 The complete set of contributors may be found at https://expandjs.github.io/CONTRIBUTORS.txt
@@ -10,18 +10,15 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 A class used to provide scheming functionality.
 
 @class xp-schema
+@since 1.0.0
 @description A class used to provide scheming functionality
-@keywords nodejs, web app, javascript, expandjs, custom elements, web-components
-@group functionality
+@keywords nodejs, expandjs
 
-@homepage http://expandjs.com/classes/xp-schema
-@repository https://github.com/ExpandJS/xp-schema
-
-@dependency expandjs ExpandJS/expandjs#0.10.0
-@dependency xp-emitter ExpandJS/xp-emitter#0.10.0
+@homepage https://expandjs.com/classes/xp-schema
+@repository https://github.com/expandjs/xp-schema
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
 <link rel="import" href="../xp-emitter/xp-emitter.html">
 
-<script src="dist/xp-schema.min.js"></script>
+<script src="dist/xp-schema.js"></script>
